syntax = "proto3";

option java_multiple_files = true;

package com.elca.vn.proto.model;
option java_outer_classname = "ProjectProto";
option objc_class_prefix = "RTG";

import "google/protobuf/timestamp.proto";

message PimProjectPersistRequest {
  string transactionID = 1;
  PimProject project = 2;
}

message PimProjectPersistResponse {
  string transactionID = 1;
  string bundleID = 2;
  bool isSuccess = 3;
  PimProject project = 4;
}

message PimProjectQueryRequest {
  string transactionID = 1;
  string searchContent = 2;
  int32 page = 3;
}

message PimProjectQueryResponse {
  string transactionID = 1;
  string bundleID = 2;
  bool isSuccess = 3;
  repeated PimProject project = 4;
}

message PimProjectCountingRequest {
  string transactionID = 1;
  string searchContent = 2;
}

message PimProjectCountingResponse {
  string transactionID = 1;
  string bundleID = 2;
  bool isSuccess = 3;
  int64 totalRecordsNum = 4;
}

message PimProject {
  int32 projectNumber = 2;
  string projectName = 3;
  string customer = 4;
  int64 groupID = 5;
  repeated string memberVISAs = 6;
  Status status = 7;
  google.protobuf.Timestamp startDate = 8;
  google.protobuf.Timestamp endDate = 9;
  ProcessingStatus processingStatus = 10;
}

enum ProcessingStatus {
  INSERT = 0;
  UPDATE = 1;
  DELETE = 2;
}

enum Status {
  NEW = 0;
  PLA = 1;
  INO = 2;
  FIN = 3;
}